--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,12 @@
-$color: steelblue;
+$primary: SeaGreen;
+$body-bg: Honeydew;
 
-.my-flix {
-    color: $color;
-}
+@import '~bootstrap/scss/bootstrap.scss';
+
+
+
+//$color: steelblue;
+
+//.my-flix {
+  //  color: $color;
+//}
