removing package.json lock, updating devdep in package.json

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,7 @@ $primary: Teal;
 $body-bg: Lavender;
 
 @import '~bootstrap/scss/bootstrap.scss';
+//@import "node_modules/bootstrap/scss/bootstrap";
 
 .navbar {
   background-color: $primary;
